.golden/5755283065522441917/golden

INITIALPATH:7:20: error:
    • Ambiguous type variable ‘t0’ arising from a use of ‘PyF.Internal.QQ.toString’
      prevents the constraint ‘(PyF.Internal.QQ.Stringable t0)’ from being solved.
      Probable fix: use a type annotation to specify what ‘t0’ should be.
      These potential instances exist:
        instance PyF.Internal.QQ.Stringable String -- Defined in ‘PyF.Internal.QQ’
        ...plus two instances involving out-of-scope types
        (use -fprint-potential-instances to see them all)
    • In the second argument of ‘(.)’, namely ‘PyF.Internal.QQ.toString’
      In the expression: (PyF.Formatters.formatString (PyF.Internal.QQ.newPaddingKForString PyF.Internal.QQ.PaddingDefaultK)) Nothing . PyF.Internal.QQ.toString
      In the first argument of ‘putStrLn’, namely ‘(((PyF.Formatters.formatString (PyF.Internal.QQ.newPaddingKForString PyF.Internal.QQ.PaddingDefaultK)) Nothing . PyF.Internal.QQ.toString) (truncate number))’
  |
7 | main = putStrLn [f|{truncate number:s}|]
  |                    ^^^^^^^^^^^^^^^^^^^^^
